<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/v1"
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_bottom_sheet_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSortBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/sort_by"
            android:textAlignment="center"
            android:textColor="@color/text_light_black"
            android:textFontWeight="500"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/v1" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:background="@color/green_50a"
            app:layout_constraintBottom_toBottomOf="parent" />


        <TextView
            android:id="@+id/tvTimeOfDelivery"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_vertical"
            android:text="@string/time_of_delivery"
            android:textColor="@color/text_light_black"
            android:textFontWeight="500"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tvSortBy" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/green_50a"
            app:layout_constraintBottom_toBottomOf="parent" />


        <TextView
            android:id="@+id/tvDeliveryFee"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_vertical"
            android:text="@string/delivery_fee"
            android:textColor="@color/text_light_black"
            android:textFontWeight="500"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tvSortBy" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/green_50a"
            app:layout_constraintBottom_toBottomOf="parent" />


        <TextView
            android:id="@+id/tvRatingSort"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_vertical"
            android:text="@string/rating"
            android:textColor="@color/text_light_black"
            android:textFontWeight="500"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tvSortBy" />


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:background="@color/green_50a"
            app:layout_constraintBottom_toBottomOf="parent" />


        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="24dp"
            android:background="@drawable/bg_tv_main"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/cancel"
            android:textColor="@color/app_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent" />


    </LinearLayout>


</layout>