<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.android.sitbak.auth.current_location.CurrentLocationVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".auth.current_location.CurrentLocationActivity">

        <include
            android:id="@+id/topBarLayout"
            layout="@layout/topbar_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:src="@drawable/ic_world_location"
            app:layout_constraintTop_toBottomOf="@+id/topBarLayout" />

        <TextView
            android:id="@+id/txt_location"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:text="@string/to_find_the_best_suppliers_give_us_access_to_your_location"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/image_view" />

        <LinearLayout
            android:id="@+id/btnCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_80sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/bg_tv_main"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/txt_location">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackgroundBorderless"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_12sdp"
                android:text="@string/current_location"
                android:textColor="@color/green_900"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_locations"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_vertical"
            android:text="@string/or_indicate_your_location"
            android:textAlignment="center"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/btnCurrentLocation"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/txt_indicate_locations"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:background="@color/white"
            android:fontFamily="@font/inter_regular"
            android:gravity="center_vertical"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:paddingStart="@dimen/_13sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:text="@string/indicate_your_location"
            android:textColor="#076A04"
            android:textSize="15sp"
            app:drawableEndCompat="@drawable/ic_location_marker_small"
            app:layout_constraintTop_toBottomOf="@id/txt_locations"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/btnStartShopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:layout_marginBottom="@dimen/_19sdp"
            android:background="@drawable/bg_tv_main_unselected"
            android:clickable="true"
            android:enabled="false"
            android:focusable="true"
            android:gravity="center"
            android:paddingVertical="@dimen/_12sdp"
            android:text="@string/start_shopping"
            android:textColor="@color/green_100"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>