<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_18sdp"
        app:cardBackgroundColor="@color/gray_nurse"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        tools:context=".home.popups.GuestAccessPopUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_15sdp"
                android:fontFamily="@font/inter_medium"
                android:text="Guest access"
                android:textColor="@color/lunar_green"
                android:textFontWeight="500"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_22sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/inter_regular"
                android:gravity="center"
                android:lineHeight="@dimen/_17sdp"
                android:text="@string/guest_users_can_only_browse_the_catalog_to_make_orders_you_must_create_an_account_or_log_in"
                android:textColor="@color/lunar_green"
                android:textFontWeight="400"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/llCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:background="@drawable/bg_btn_main"
                app:layout_constraintBottom_toTopOf="@id/llRecoverByEmail">

                <TextView
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/create_account"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_btn_main"
                app:layout_constraintTop_toBottomOf="@id/llCreateAccount">

                <TextView
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llContinueAsAGuest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:background="@drawable/bg_tv_main"
                app:layout_constraintTop_toBottomOf="@id/tvMain">

                <TextView
                    android:id="@+id/btnContinueAsAGuest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:paddingVertical="@dimen/_12sdp"
                    android:text="@string/continue_as_guest"
                    android:textColor="@color/green_900"
                    android:textSize="15sp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>